# histvis

./: .gitignore  LICENSE  README.md  pyproject.toml
src/histvis/: __init__.py  cli.py  eval_errors.py  eval_metrics.py  eval_scatter.py  inference.py  utils.py
tests/: test_cli_parsing.py  test_eval_metrics.py  test_utils.py
